<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activity.FormularioProdutoActivity">

        <ImageView
            android:id="@+id/activity_formulario_produto_imagem"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="@string/imagem_do_produto"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/banana2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_formulario_produto_nome_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="@id/activity_formulario_produto_imagem"
            app:layout_constraintStart_toStartOf="@id/activity_formulario_produto_imagem"
            app:layout_constraintTop_toBottomOf="@id/activity_formulario_produto_imagem">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_formulario_produto_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_formulario_produto_descricao_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="@id/activity_formulario_produto_nome_input_layout"
            app:layout_constraintStart_toStartOf="@id/activity_formulario_produto_nome_input_layout"
            app:layout_constraintTop_toBottomOf="@id/activity_formulario_produto_nome_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_formulario_produto_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descricao"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_formulario_produto_valor_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="@id/activity_formulario_produto_descricao_input_layout"
            app:layout_constraintStart_toStartOf="@id/activity_formulario_produto_descricao_input_layout"
            app:layout_constraintTop_toBottomOf="@id/activity_formulario_produto_descricao_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_formulario_produto_valor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/valor"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/activity_formulario_produto_botao_salvar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/salvar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>